--- a/post.hbs
+++ b/post.hbs
@@ -7,11 +7,12 @@
     <article class="{{post_class}}">
 
         <header class="post-header">
-          <p class="post-date">{{date published_at format="MMMM DD, YYYY"}} {{#if tags}}&nbsp;
-            <p class="post-title">{{title}}</p>
-                {{#foreach tags}}
+          <p class="post-date">{{date published_at format="MMMM DD, YYYY"}} | 🏷️ {{#if tags}}
+           {{#foreach tags}}
                     <a href="{{url}}" title="{{name}}" class="tag">{{name}}</a>&nbsp;&nbsp;
                 {{/foreach}}
+            <p class="post-title">{{title}}</p>
+               
             {{/if}}</p>
         </header>
 
