--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
         <section class="post-content">
             {{content}}
         </section>
-
+{{> "comments"}}
         </main>
 </div>
 </div>
