fixes on frontpage

--- a/home.hbs
+++ b/home.hbs
@@ -18,9 +18,6 @@
 
           <p id="input_entered"> > Sean.Skills</p>
        <p id="output_entered">["PHP, Laravel, CSS, HTML, Java, Git"]</p>
-
-         <p id="input_entered"> >Sean.current</p>
-       <p id="output_entered">["Trying to find a job in software development"]</p>
     
     <p id="input_entered">><span id="blink">_</span></div></p>
     </div>
@@ -36,10 +33,7 @@
    <button type="button" class="btn btn-outline-success">CSS</button>
    <button type="button" class="btn btn-outline-info">JavaScript</button>
    <button type="button" class="btn btn-outline-warning">Laravel</button>
-      <hr />
-    <div class="btn-group float-left">
-     <a role="button" href="https://exercisestory.com"  class="btn btn-success btn-sm">View Project 🔗</a>
-       </div>
+ 
   </div>
 </div>
 
@@ -51,10 +45,6 @@
    <button type="button" class="btn btn-outline-success">CSS</button>
    <button type="button" class="btn btn-outline-info">JavaScript</button>
    <button type="button" class="btn btn-outline-warning">Laravel</button>
-     <hr />
-    <div class="btn-group float-left">
-     <a role="button" href="https://codingdictionary.com"  class="btn btn-success btn-sm">View Project 🔗</a>
-       </div>
 
   </div>
 </div>
@@ -67,13 +57,10 @@
    <button type="button" class="btn btn-outline-success">CSS</button>
    <button type="button" class="btn btn-outline-info">JavaScript</button>
    <button type="button" class="btn btn-outline-warning">Laravel</button>
-      <hr />
-    <div class="btn-group float-left">
-     <a role="button" href="https://everfeedback.com"  class="btn btn-success btn-sm">View Project 🔗</a>
-       </div>
+   
 </div>
 </div>
-  <a role="button" href="https://github.com/seancork" class="btn btn-outline-primary">View more projects 🔗 </a>
+  <a role="button" href="https://seanoneill.me/projects" class="btn btn-outline-primary">View Project Page 🔗 </a>
 </main>
 </div>
 </div>
